# rosDonateBox

./: CMakeLists.txt  README.md
arduino/rosDonateBox/: CommandScanner.cpp  CommandScanner.hpp  Config.hpp  DG600FMode3.cpp  DG600FMode3.hpp  TelnetServer.cpp  TelnetServer.hpp  config.hpp  rosDonateBox.ino
arduino/rosDonateBox/fonts/: OpenSansPlain40Minimal.h
msg/: Donation.msg
rosDonateBox/: rosDonateBox.ino
rosDonateBox/fonts/: dialog40.h
rosdonatebox_ws/: package.xml
rosdonatebox_ws/msg/: Donation.msg
